ImpressCMS ChangeLog

===2008-07-29 : ImpressCMS 1.0.1 "Janus" Final===

'''Fixed'''
* security vulnerability in modules/admin.php (vaughan/rodrigo/wtravel)
* various potential vulnerabilities in a few files (vaughan/rodrigo/wtravel)
* typo in htaccess.txt for error documents in error 500. errpr.php should be error.php (Wizanda)
* Header footer logo were not displayed on redirect screen of impresstheme (malanciault)

===2008-03-10 : ImpressCMS 1.0 "Janus" Final===

'''Improved'''
* Updating the VersionChecker to handle situation where the impresscms_xml feed cann not be read (firewall, no internet access, etc...) (malanciault)
* In the VersionChecker, changed errors to an array and provided a the language constant as the error message - the version checker now reports correctly when it cannot find a valid version_xml (skenow)
* admin_version template (sato-san/davidl2)
* Syntax/grammar check in install wizard (andrewvincent/xoops-magazine)
* Syntax/grammar check in preferences (andrewvincent)
* Changing the links in About ImpressCMS admin menu for the links to open in new window (malanciaut)

'''Fixed'''
* Fixing the version checker to reinstate the code about module info popup (malanciault)

'''Added'''
* htmlspecialchars to $_GET['xoops_redirect'] parameter in user.php to prevent XSS. (vaughan/skenow)

===2008-03-04 : ImpressCMS 1.0 "Janus" RC 3===

'''Improved'''
* Improved system_redirect template in impresstheme theme (Snow/malanciault/Underdogg/davidl2)
* Improved system_siteclose template in impresstheme theme (Snow/malanciault/Underdogg/davidl2)
* Upgrade script has been improved to also clean the cache folder (malanciault/rplima)

'''Fixed'''
* #1905281 Redirect function not using the user selected theme (malanciault)
* the ImpressCMS logo used on impresstheme as well as in the admin section have been updated (nekro/MrTheme)

'''Added'''

* Addition of the global navigationlink in impresstheme theme (mcdonald/skenow/malanciault)