@@ -10,7 +10,7 @@
 * @version		$Id: version.php 897 2008-02-15 19:53:31Z malanciault $
 */
 
-define("ICMS_VERSION_NAME",'ImpressCMS 1.0.1 "Janus" Final');
+define("ICMS_VERSION_NAME",'ImpressCMS 1.0.2 "Janus" RC 1');
 
 // For backward compatibility with XOOPS
 define("XOOPS_VERSION", ICMS_VERSION_NAME);
@@ -27,8 +27,8 @@ define("ICMS_VERSION_STATUS", 10);
 
 /*
  * Build number
- * 
+ *
  * Every release has its own build number, incrementable by 1 everytime we make a release
  */
-define("ICMS_VERSION_BUILD", 7);
+define("ICMS_VERSION_BUILD", 8);
 ?>
