@@ -32,10 +32,12 @@
 if ( !is_object($xoopsUser) || !is_object($xoopsModule) || !$xoopsUser->isAdmin($xoopsModule->mid()) ) {
     exit("Access Denied");
 } else {
-	if(!empty($_POST)) foreach($_POST as $k => $v) ${$k} = StopXSS($v);
-	if(!empty($_GET)) foreach($_GET as $k => $v) ${$k} = StopXSS($v);
+	$allowedHTML = array('html');
+
+	if(!empty($_POST)){ foreach($_POST as $k => $v){ if (!in_array($k,$allowedHTML)){${$k} = StopXSS($v);}else{${$k} = $v;}}}
+	if(!empty($_GET)){ foreach($_GET as $k => $v){ if (!in_array($k,$allowedHTML)){${$k} = StopXSS($v);}else{${$k} = $v;}}}
 	$op = (isset($_GET['op']))?trim(StopXSS($_GET['op'])):((isset($_POST['op']))?trim(StopXSS($_POST['op'])):'list');
-    if ($op != 'list') {
+    if (isset($_GET['op'])) {
         $id = $moddir = $file = $type = $tplset = null;
         if (isset($_GET['id'])) {
             $id = intval($_GET['id']);
