@@ -1,9 +1,9 @@
-ImpressCMS 1.0.1 "Janus" Final release notes
+ImpressCMS 1.0.2 "Janus" RC 1 release notes
 ==================================
 
-The ImpressCMS Project is very proud to announce the release: ImpressCMS 1.0.1 "Janus" Final. This release is ready for production web sites !
+The ImpressCMS Project is very proud to announce the release: ImpressCMS 1.0.2 "Janus" RC 1. This release should not be installed on production sites. The final release should come very soon!
 
-ImpressCMS 1.0.1 is based on the ImpressCMS 1.0 core (Which was based on XOOPS 2.0.17 core + some additions made in the XOOPS 2.0.18 development branch) and, as such, will retain compatibility with existing XOOPS modules and themes. The goal is to provide an on-going, stable environment for information and support for XOOPS and its users.
+ImpressCMS 1.0.2 is based on the ImpressCMS 1.0 core (Which was based on XOOPS 2.0.17 core + some additions made in the XOOPS 2.0.18 development branch) and, as such, will retain compatibility with existing XOOPS modules and themes. The goal is to provide an on-going, stable environment for information and support for XOOPS and its users.
 
 Please see the full changelog for details in docs/changelog.txt.
 
@@ -40,7 +40,7 @@ You can easily get ImpressCMS using SVN. Instructions about this can be found he
 http://wiki.impresscms.org/index.php?title=Install_and_update_using_SVN
 
 The path for this release is the following:
-https://impresscms.svn.sourceforge.net/svnroot/impresscms/core/tags/impresscms_1.0.1_final/
+https://impresscms.svn.sourceforge.net/svnroot/impresscms/core/tags/impresscms_1.0.2_rc1/
 
 If you feel like getting the latest "edge" version, you can checkout the core trunk at :
 
